fix: spacing fix on first input dropdown

--- a/src/app/main/inputs-outputs/inputs/inputs.component.css
+++ b/src/app/main/inputs-outputs/inputs/inputs.component.css
@@ -24,9 +24,8 @@ rux-pop-up {
 
 /* These part modifications make the popup look like a type-ahead dropdown */
 rux-pop-up::part(popup-content) {
+  width: calc(100% - var(--spacing-6));
   margin-top: -12px;
-  margin-right: 12px;
-  margin-left: -26px;
 }
 
 rux-pop-up::part(arrow) {
@@ -40,6 +39,7 @@ rux-menu {
 
 .inputs_main > :first-child {
   padding-block-start: var(--spacing-0);
+  cursor: pointer;
 }
 
 .inputs_input-button-wrapper {
